# Core-Analytic

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/core/: config.py
src/dtos/: __init__.py  events.py
src/pipelines/: __init__.py  entities.py  keywords.py  labels.py  sentiments.py  text_analysis.py  topics.py
src/schemas/: __init__.py  entities.py  entity.py  keywords.py  labels.py  sentiments.py  topics.py  words.py
src/streaming/dtos/: __init__.py  content_event.py  topic_event.py
src/streaming/pipelines/: text_analysis.py
src/streaming/routers/: __init__.py  events.py  topic_event.py
src/streaming/schemas/: __init__.py  content_event.py  entity.py  keyword.py  sentiment.py  topic_event.py
src/streaming/transformers/: __init__.py  events.py
src/utils/: dates.py  nlp.py
tests/utils/: test_dates.py
