[project]
name = "producer-event"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "keybert[spacy]>=0.9.0",
    "spacy>=3.8.5",
    "transformers>=4.51.3",
    "faststream[cli,kafka]>=0.5.40",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
show-fixes = true

[tool.mypy]
strict = true
ignore_missing_imports = true
implicit_optional = true
plugins = ['pydantic.mypy']
